5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1836_1276.log
== SUBMITION (2019-06-27 10:53:20) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
0.535547
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:34) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
1.1586
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:35) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
1.90785
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:36) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
2.21967
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:38) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
3.18074
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:38) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
6.25837
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:38) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
6.46464
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:38) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
6.02642
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:39) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
6.09944
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:40) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
8.30212
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:41) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
4.05903
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:44) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
2.42968
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1276/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:44) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
2.41273
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:53:44) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
2.38797
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1836/1276/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:54:01) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias):
	if dias[i] == max(dias):
		print(i+1)
-- ERROR:
File "XXXX", line 8
    for i in range(size(dias):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:54:16) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias)):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
0.989394
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
2
3
4
5
6
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:54:30) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,1])
	
for i in range(size(dias)):
	if dias[i] == max(dias):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:58:15) 
-- CODE:
from numpy import*
mat=array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:,1])
	
for i in range(size(dias)):
	if dias[i] == max(dias):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:58:43) 
-- CODE:
from numpy import*
mat = 
array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:,1])
	
for i in range(size(dias)):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
0.852825
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 2
    mat = 
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:43:39) 
-- CODE:
from numpy import*
mat = array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:,1])
	
for i in range(size(dias)):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
0.92883
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
2
3
4
5
6
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:43:58) 
-- CODE:
from numpy import*
mat = array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:,1])	
for i in range(size(dias)):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
0.98222
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
2
3
4
5
6
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:44:06) 
-- CODE:
from numpy import*
mat = array(eval(input("vai:")))
dias = zeros(shape(mat)[1], dtype=int)
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:,1])	
for i in range(size(dias)):
	if dias[i] == max(dias):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:48:12) 
-- CODE:
from numpy import*
mat = array(eval(input("a:")))
dias = zeros(shape(mat)[1], dtype=int)
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:,1])	
for i in range(size(dias)):
	if dias[i] == max(dias):
		print(i+1)
-- EXECUTION TIME:
1.17959
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
2
3
4
5
6
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:02:57) 
-- CODE:
from numpy import*
mat = array(eval(input("a:")))
dias = zeros(shape(mat)[1],dtype=int)
for i in range(shape(mat)[1]):
	dias[i]=sum(mat[:,i])	
for i in range(size(dias)):
	if dias[i]==max(dias):
		print(i+1)
-- EXECUTION TIME:
1.07757
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
